Complete ModelEngine head compatibility validation